// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TabsRow render should render in amp 1`] = `
<TestProvider app={{...}}>
  <Provider router={{...}} app={{...}} history={{...}} nextId={[Function: nextId]}>
    <MuiThemeProviderOld theme={{...}}>
      <WithStyles(inject-TabsRow-with-app) items={{...}}>
        <inject-TabsRow-with-app items={{...}} classes={{...}}>
          <TabsRow items={{...}} classes={{...}} app={{...}} variant="scrollable" orientation="horizontal" centered={false}>
            <WithStyles(Tabs) value={false} onChange={[Function]} indicatorColor="secondary" variant="scrollable" className="RSFTabsRow-root-189" classes={{...}}>
              <Tabs value={false} onChange={[Function]} indicatorColor="secondary" variant="scrollable" className="RSFTabsRow-root-189" theme={{...}} classes={{...}} centered={false} component="div" fullWidth={false} scrollable={false} ScrollButtonComponent={[Function: WithStyles]} scrollButtons="auto" textColor="inherit">
                <div className="MuiTabs-root-197 RSFTabsRow-root-189 RSFTabsRow-root-189" variant="scrollable">
                  <EventListener target="window" onResize={[Function: debounced]} />
                  <div className="MuiTabs-flexContainer-198">
                    <div className="MuiTabs-scroller-200 RSFTabsRow-scroller-193 MuiTabs-fixed-201" style={{...}} role="tablist" onScroll={[Function: debounced]}>
                      <div className="MuiTabs-flexContainer-198">
                        <WithStyles(Tab) label={{...}} icon={[undefined]} classes={{...}} fullWidth={false} indicator={false} selected={false} onChange={[Function]} textColor="inherit" value={0}>
                          <Tab label={{...}} icon={[undefined]} fullWidth={false} indicator={false} selected={false} onChange={[Function]} textColor="inherit" value={0} classes={{...}} disabled={false}>
                            <WithStyles(ButtonBase) focusRipple={true} className="MuiTab-root-206 RSFTabsRow-tab-190 MuiTab-textColorInherit-208" role="tab" aria-selected={false} disabled={false} onClick={[Function]}>
                              <ButtonBase focusRipple={true} className="MuiTab-root-206 RSFTabsRow-tab-190 MuiTab-textColorInherit-208" role="tab" aria-selected={false} disabled={false} onClick={[Function]} classes={{...}} centerRipple={false} component="button" disableRipple={false} disableTouchRipple={false} tabIndex="0" type="button">
                                <button className="MuiButtonBase-root-218 MuiTab-root-206 RSFTabsRow-tab-190 MuiTab-textColorInherit-208" onBlur={[Function]} onFocus={[Function]} onKeyDown={[Function]} onKeyUp={[Function]} onMouseDown={[Function]} onMouseLeave={[Function]} onMouseUp={[Function]} onTouchEnd={[Function]} onTouchMove={[Function]} onTouchStart={[Function]} tabIndex="0" type="button" disabled={false} role="tab" aria-selected={false} onClick={[Function]}>
                                  <span className="MuiTab-wrapper-214">
                                    <span className="MuiTab-labelContainer-215">
                                      <span className="MuiTab-label-216">
                                        <WithStyles(inject-Link) className="RSFTabsRow-link-194" to="https://www.example.com" prefetch={[undefined]} onClick={[Function]}>
                                          <inject-Link className="RSFTabsRow-link-194" to="https://www.example.com" prefetch={[undefined]} onClick={[Function]} classes={{...}}>
                                            <Link className="RSFTabsRow-link-194" to="https://www.example.com" prefetch={[undefined]} onClick={[Function]} classes={{...}} history={{...}} router={{...}} location={{...}} anchorProps={{...}}>
                                              <a data-moov-link="on" className="RSFLink-root-221 RSFTabsRow-link-194" style={[undefined]} onClick={[Function]} href="https://www.example.com">
                                                Tab 1
                                              </a>
                                            </Link>
                                          </inject-Link>
                                        </WithStyles(inject-Link)>
                                      </span>
                                    </span>
                                  </span>
                                  <NoSsr defer={false} fallback={{...}}>
                                    <WithStyles(TouchRipple) innerRef={[Function]} center={false}>
                                      <TouchRipple center={false} classes={{...}}>
                                        <TransitionGroup component="span" enter={true} exit={true} className="MuiTouchRipple-root-222" childFactory={[Function: childFactory]}>
                                          <span className="MuiTouchRipple-root-222" />
                                        </TransitionGroup>
                                      </TouchRipple>
                                    </WithStyles(TouchRipple)>
                                  </NoSsr>
                                </button>
                              </ButtonBase>
                            </WithStyles(ButtonBase)>
                          </Tab>
                        </WithStyles(Tab)>
                        <WithStyles(Tab) label={{...}} icon={[undefined]} classes={{...}} fullWidth={false} indicator={false} selected={false} onChange={[Function]} textColor="inherit" value={1}>
                          <Tab label={{...}} icon={[undefined]} fullWidth={false} indicator={false} selected={false} onChange={[Function]} textColor="inherit" value={1} classes={{...}} disabled={false}>
                            <WithStyles(ButtonBase) focusRipple={true} className="MuiTab-root-206 RSFTabsRow-tab-190 MuiTab-textColorInherit-208" role="tab" aria-selected={false} disabled={false} onClick={[Function]}>
                              <ButtonBase focusRipple={true} className="MuiTab-root-206 RSFTabsRow-tab-190 MuiTab-textColorInherit-208" role="tab" aria-selected={false} disabled={false} onClick={[Function]} classes={{...}} centerRipple={false} component="button" disableRipple={false} disableTouchRipple={false} tabIndex="0" type="button">
                                <button className="MuiButtonBase-root-218 MuiTab-root-206 RSFTabsRow-tab-190 MuiTab-textColorInherit-208" onBlur={[Function]} onFocus={[Function]} onKeyDown={[Function]} onKeyUp={[Function]} onMouseDown={[Function]} onMouseLeave={[Function]} onMouseUp={[Function]} onTouchEnd={[Function]} onTouchMove={[Function]} onTouchStart={[Function]} tabIndex="0" type="button" disabled={false} role="tab" aria-selected={false} onClick={[Function]}>
                                  <span className="MuiTab-wrapper-214">
                                    <span className="MuiTab-labelContainer-215">
                                      <span className="MuiTab-label-216">
                                        <WithStyles(inject-Link) className="RSFTabsRow-link-194" to="https://www.example.com" prefetch={[undefined]} onClick={[Function]}>
                                          <inject-Link className="RSFTabsRow-link-194" to="https://www.example.com" prefetch={[undefined]} onClick={[Function]} classes={{...}}>
                                            <Link className="RSFTabsRow-link-194" to="https://www.example.com" prefetch={[undefined]} onClick={[Function]} classes={{...}} history={{...}} router={{...}} location={{...}} anchorProps={{...}}>
                                              <a data-moov-link="on" className="RSFLink-root-221 RSFTabsRow-link-194" style={[undefined]} onClick={[Function]} href="https://www.example.com">
                                                Tab 2
                                              </a>
                                            </Link>
                                          </inject-Link>
                                        </WithStyles(inject-Link)>
                                      </span>
                                    </span>
                                  </span>
                                  <NoSsr defer={false} fallback={{...}}>
                                    <WithStyles(TouchRipple) innerRef={[Function]} center={false}>
                                      <TouchRipple center={false} classes={{...}}>
                                        <TransitionGroup component="span" enter={true} exit={true} className="MuiTouchRipple-root-222" childFactory={[Function: childFactory]}>
                                          <span className="MuiTouchRipple-root-222" />
                                        </TransitionGroup>
                                      </TouchRipple>
                                    </WithStyles(TouchRipple)>
                                  </NoSsr>
                                </button>
                              </ButtonBase>
                            </WithStyles(ButtonBase)>
                          </Tab>
                        </WithStyles(Tab)>
                      </div>
                      <WithStyles(TabIndicator) className="MuiTabs-indicator-205 RSFTabsRow-indicator-186 RSFTabsRow-noSelection-187" color="secondary" style={{...}}>
                        <TabIndicator className="MuiTabs-indicator-205 RSFTabsRow-indicator-186 RSFTabsRow-noSelection-187" color="secondary" style={{...}} classes={{...}}>
                          <span className="MuiPrivateTabIndicator-root-229 MuiPrivateTabIndicator-colorSecondary-231 MuiTabs-indicator-205 RSFTabsRow-indicator-186 RSFTabsRow-noSelection-187" style={{...}} />
                        </TabIndicator>
                      </WithStyles(TabIndicator)>
                    </div>
                  </div>
                </div>
              </Tabs>
            </WithStyles(Tabs)>
          </TabsRow>
        </inject-TabsRow-with-app>
      </WithStyles(inject-TabsRow-with-app)>
    </MuiThemeProviderOld>
  </Provider>
</TestProvider>
`;

exports[`TabsRow render should render tabs vertically 1`] = `
<TestProvider>
  <Provider router={{...}} app={{...}} history={{...}} nextId={[Function: nextId]}>
    <MuiThemeProviderOld theme={{...}}>
      <WithStyles(inject-TabsRow-with-app) items={{...}} orientation="vertical">
        <inject-TabsRow-with-app items={{...}} orientation="vertical" classes={{...}}>
          <TabsRow items={{...}} orientation="vertical" classes={{...}} app={{...}} variant="scrollable" centered={false}>
            <WithStyles(Tabs) value={false} onChange={[Function]} indicatorColor="secondary" variant="scrollable" className="RSFTabsRow-root-144" classes={{...}}>
              <Tabs value={false} onChange={[Function]} indicatorColor="secondary" variant="scrollable" className="RSFTabsRow-root-144" theme={{...}} classes={{...}} centered={false} component="div" fullWidth={false} scrollable={false} ScrollButtonComponent={[Function: WithStyles]} scrollButtons="auto" textColor="inherit">
                <div className="MuiTabs-root-152 RSFTabsRow-root-144 RSFTabsRow-root-144" variant="scrollable">
                  <EventListener target="window" onResize={[Function: debounced]} />
                  <div className="MuiTabs-flexContainer-153 RSFTabsRow-vertical-151">
                    <div className="MuiTabs-scroller-155 RSFTabsRow-scroller-148 MuiTabs-fixed-156" style={{...}} role="tablist" onScroll={[Function: debounced]}>
                      <div className="MuiTabs-flexContainer-153 RSFTabsRow-vertical-151">
                        <WithStyles(Tab) label="Tab 1" icon={[undefined]} classes={{...}} fullWidth={false} indicator={false} selected={false} onChange={[Function]} textColor="inherit" value={0}>
                          <Tab label="Tab 1" icon={[undefined]} fullWidth={false} indicator={false} selected={false} onChange={[Function]} textColor="inherit" value={0} classes={{...}} disabled={false}>
                            <WithStyles(ButtonBase) focusRipple={true} className="MuiTab-root-161 RSFTabsRow-tab-145 MuiTab-textColorInherit-163" role="tab" aria-selected={false} disabled={false} onClick={[Function]}>
                              <ButtonBase focusRipple={true} className="MuiTab-root-161 RSFTabsRow-tab-145 MuiTab-textColorInherit-163" role="tab" aria-selected={false} disabled={false} onClick={[Function]} classes={{...}} centerRipple={false} component="button" disableRipple={false} disableTouchRipple={false} tabIndex="0" type="button">
                                <button className="MuiButtonBase-root-173 MuiTab-root-161 RSFTabsRow-tab-145 MuiTab-textColorInherit-163" onBlur={[Function]} onFocus={[Function]} onKeyDown={[Function]} onKeyUp={[Function]} onMouseDown={[Function]} onMouseLeave={[Function]} onMouseUp={[Function]} onTouchEnd={[Function]} onTouchMove={[Function]} onTouchStart={[Function]} tabIndex="0" type="button" disabled={false} role="tab" aria-selected={false} onClick={[Function]}>
                                  <span className="MuiTab-wrapper-169">
                                    <span className="MuiTab-labelContainer-170">
                                      <span className="MuiTab-label-171">
                                        Tab 1
                                      </span>
                                    </span>
                                  </span>
                                  <NoSsr defer={false} fallback={{...}}>
                                    <WithStyles(TouchRipple) innerRef={[Function]} center={false}>
                                      <TouchRipple center={false} classes={{...}}>
                                        <TransitionGroup component="span" enter={true} exit={true} className="MuiTouchRipple-root-176" childFactory={[Function: childFactory]}>
                                          <span className="MuiTouchRipple-root-176" />
                                        </TransitionGroup>
                                      </TouchRipple>
                                    </WithStyles(TouchRipple)>
                                  </NoSsr>
                                </button>
                              </ButtonBase>
                            </WithStyles(ButtonBase)>
                          </Tab>
                        </WithStyles(Tab)>
                        <WithStyles(Tab) label="Tab 2" icon={[undefined]} classes={{...}} fullWidth={false} indicator={false} selected={false} onChange={[Function]} textColor="inherit" value={1}>
                          <Tab label="Tab 2" icon={[undefined]} fullWidth={false} indicator={false} selected={false} onChange={[Function]} textColor="inherit" value={1} classes={{...}} disabled={false}>
                            <WithStyles(ButtonBase) focusRipple={true} className="MuiTab-root-161 RSFTabsRow-tab-145 MuiTab-textColorInherit-163" role="tab" aria-selected={false} disabled={false} onClick={[Function]}>
                              <ButtonBase focusRipple={true} className="MuiTab-root-161 RSFTabsRow-tab-145 MuiTab-textColorInherit-163" role="tab" aria-selected={false} disabled={false} onClick={[Function]} classes={{...}} centerRipple={false} component="button" disableRipple={false} disableTouchRipple={false} tabIndex="0" type="button">
                                <button className="MuiButtonBase-root-173 MuiTab-root-161 RSFTabsRow-tab-145 MuiTab-textColorInherit-163" onBlur={[Function]} onFocus={[Function]} onKeyDown={[Function]} onKeyUp={[Function]} onMouseDown={[Function]} onMouseLeave={[Function]} onMouseUp={[Function]} onTouchEnd={[Function]} onTouchMove={[Function]} onTouchStart={[Function]} tabIndex="0" type="button" disabled={false} role="tab" aria-selected={false} onClick={[Function]}>
                                  <span className="MuiTab-wrapper-169">
                                    <span className="MuiTab-labelContainer-170">
                                      <span className="MuiTab-label-171">
                                        Tab 2
                                      </span>
                                    </span>
                                  </span>
                                  <NoSsr defer={false} fallback={{...}}>
                                    <WithStyles(TouchRipple) innerRef={[Function]} center={false}>
                                      <TouchRipple center={false} classes={{...}}>
                                        <TransitionGroup component="span" enter={true} exit={true} className="MuiTouchRipple-root-176" childFactory={[Function: childFactory]}>
                                          <span className="MuiTouchRipple-root-176" />
                                        </TransitionGroup>
                                      </TouchRipple>
                                    </WithStyles(TouchRipple)>
                                  </NoSsr>
                                </button>
                              </ButtonBase>
                            </WithStyles(ButtonBase)>
                          </Tab>
                        </WithStyles(Tab)>
                      </div>
                      <WithStyles(TabIndicator) className="MuiTabs-indicator-160 RSFTabsRow-indicator-141 RSFTabsRow-noSelection-142 RSFTabsRow-verticalIndicator-143" color="secondary" style={{...}}>
                        <TabIndicator className="MuiTabs-indicator-160 RSFTabsRow-indicator-141 RSFTabsRow-noSelection-142 RSFTabsRow-verticalIndicator-143" color="secondary" style={{...}} classes={{...}}>
                          <span className="MuiPrivateTabIndicator-root-183 MuiPrivateTabIndicator-colorSecondary-185 MuiTabs-indicator-160 RSFTabsRow-indicator-141 RSFTabsRow-noSelection-142 RSFTabsRow-verticalIndicator-143" style={{...}} />
                        </TabIndicator>
                      </WithStyles(TabIndicator)>
                    </div>
                  </div>
                </div>
              </Tabs>
            </WithStyles(Tabs)>
          </TabsRow>
        </inject-TabsRow-with-app>
      </WithStyles(inject-TabsRow-with-app)>
    </MuiThemeProviderOld>
  </Provider>
</TestProvider>
`;

exports[`TabsRow render should render tabs with images 1`] = `
<TestProvider>
  <Provider router={{...}} app={{...}} history={{...}} nextId={[Function: nextId]}>
    <MuiThemeProviderOld theme={{...}}>
      <WithStyles(inject-TabsRow-with-app) items={{...}}>
        <inject-TabsRow-with-app items={{...}} classes={{...}}>
          <TabsRow items={{...}} classes={{...}} app={{...}} variant="scrollable" orientation="horizontal" centered={false}>
            <WithStyles(Tabs) value={false} onChange={[Function]} indicatorColor="secondary" variant="scrollable" className="RSFTabsRow-root-4" classes={{...}}>
              <Tabs value={false} onChange={[Function]} indicatorColor="secondary" variant="scrollable" className="RSFTabsRow-root-4" theme={{...}} classes={{...}} centered={false} component="div" fullWidth={false} scrollable={false} ScrollButtonComponent={[Function: WithStyles]} scrollButtons="auto" textColor="inherit">
                <div className="MuiTabs-root-12 RSFTabsRow-root-4 RSFTabsRow-root-4" variant="scrollable">
                  <EventListener target="window" onResize={[Function: debounced]} />
                  <div className="MuiTabs-flexContainer-13">
                    <div className="MuiTabs-scroller-15 RSFTabsRow-scroller-8 MuiTabs-fixed-16" style={{...}} role="tablist" onScroll={[Function: debounced]}>
                      <div className="MuiTabs-flexContainer-13">
                        <WithStyles(Tab) label={[undefined]} icon={{...}} classes={{...}} fullWidth={false} indicator={false} selected={false} onChange={[Function]} textColor="inherit" value={0}>
                          <Tab label={[undefined]} icon={{...}} fullWidth={false} indicator={false} selected={false} onChange={[Function]} textColor="inherit" value={0} classes={{...}} disabled={false}>
                            <WithStyles(ButtonBase) focusRipple={true} className="MuiTab-root-21 RSFTabsRow-tab-5 MuiTab-textColorInherit-23" role="tab" aria-selected={false} disabled={false} onClick={[Function]}>
                              <ButtonBase focusRipple={true} className="MuiTab-root-21 RSFTabsRow-tab-5 MuiTab-textColorInherit-23" role="tab" aria-selected={false} disabled={false} onClick={[Function]} classes={{...}} centerRipple={false} component="button" disableRipple={false} disableTouchRipple={false} tabIndex="0" type="button">
                                <button className="MuiButtonBase-root-33 MuiTab-root-21 RSFTabsRow-tab-5 MuiTab-textColorInherit-23" onBlur={[Function]} onFocus={[Function]} onKeyDown={[Function]} onKeyUp={[Function]} onMouseDown={[Function]} onMouseLeave={[Function]} onMouseUp={[Function]} onTouchEnd={[Function]} onTouchMove={[Function]} onTouchStart={[Function]} tabIndex="0" type="button" disabled={false} role="tab" aria-selected={false} onClick={[Function]}>
                                  <span className="MuiTab-wrapper-29">
                                    <WithStyles(inject-Image) src="https://example.com" alt={[undefined]}>
                                      <inject-Image src="https://example.com" alt={[undefined]} classes={{...}}>
                                        <Image src="https://example.com" alt={[undefined]} classes={{...}} amp={false} quality={{...}} contain={false} fill={false} lazy={false} lazyOffset={100} optimize={{...}}>
                                          <div className="RSFImage-root-36">
                                            <img src="https://example.com" className="" layout={{...}} height={[undefined]} width={[undefined]} alt={[undefined]} amp-bind={[undefined]} onError={[Function]} />
                                          </div>
                                        </Image>
                                      </inject-Image>
                                    </WithStyles(inject-Image)>
                                  </span>
                                  <NoSsr defer={false} fallback={{...}}>
                                    <WithStyles(TouchRipple) innerRef={[Function]} center={false}>
                                      <TouchRipple center={false} classes={{...}}>
                                        <TransitionGroup component="span" enter={true} exit={true} className="MuiTouchRipple-root-40" childFactory={[Function: childFactory]}>
                                          <span className="MuiTouchRipple-root-40" />
                                        </TransitionGroup>
                                      </TouchRipple>
                                    </WithStyles(TouchRipple)>
                                  </NoSsr>
                                </button>
                              </ButtonBase>
                            </WithStyles(ButtonBase)>
                          </Tab>
                        </WithStyles(Tab)>
                        <WithStyles(Tab) label={[undefined]} icon={{...}} classes={{...}} fullWidth={false} indicator={false} selected={false} onChange={[Function]} textColor="inherit" value={1}>
                          <Tab label={[undefined]} icon={{...}} fullWidth={false} indicator={false} selected={false} onChange={[Function]} textColor="inherit" value={1} classes={{...}} disabled={false}>
                            <WithStyles(ButtonBase) focusRipple={true} className="MuiTab-root-21 RSFTabsRow-tab-5 MuiTab-textColorInherit-23" role="tab" aria-selected={false} disabled={false} onClick={[Function]}>
                              <ButtonBase focusRipple={true} className="MuiTab-root-21 RSFTabsRow-tab-5 MuiTab-textColorInherit-23" role="tab" aria-selected={false} disabled={false} onClick={[Function]} classes={{...}} centerRipple={false} component="button" disableRipple={false} disableTouchRipple={false} tabIndex="0" type="button">
                                <button className="MuiButtonBase-root-33 MuiTab-root-21 RSFTabsRow-tab-5 MuiTab-textColorInherit-23" onBlur={[Function]} onFocus={[Function]} onKeyDown={[Function]} onKeyUp={[Function]} onMouseDown={[Function]} onMouseLeave={[Function]} onMouseUp={[Function]} onTouchEnd={[Function]} onTouchMove={[Function]} onTouchStart={[Function]} tabIndex="0" type="button" disabled={false} role="tab" aria-selected={false} onClick={[Function]}>
                                  <span className="MuiTab-wrapper-29">
                                    <WithStyles(inject-Image) src="https://example.com" alt={[undefined]}>
                                      <inject-Image src="https://example.com" alt={[undefined]} classes={{...}}>
                                        <Image src="https://example.com" alt={[undefined]} classes={{...}} amp={false} quality={{...}} contain={false} fill={false} lazy={false} lazyOffset={100} optimize={{...}}>
                                          <div className="RSFImage-root-36">
                                            <img src="https://example.com" className="" layout={{...}} height={[undefined]} width={[undefined]} alt={[undefined]} amp-bind={[undefined]} onError={[Function]} />
                                          </div>
                                        </Image>
                                      </inject-Image>
                                    </WithStyles(inject-Image)>
                                  </span>
                                  <NoSsr defer={false} fallback={{...}}>
                                    <WithStyles(TouchRipple) innerRef={[Function]} center={false}>
                                      <TouchRipple center={false} classes={{...}}>
                                        <TransitionGroup component="span" enter={true} exit={true} className="MuiTouchRipple-root-40" childFactory={[Function: childFactory]}>
                                          <span className="MuiTouchRipple-root-40" />
                                        </TransitionGroup>
                                      </TouchRipple>
                                    </WithStyles(TouchRipple)>
                                  </NoSsr>
                                </button>
                              </ButtonBase>
                            </WithStyles(ButtonBase)>
                          </Tab>
                        </WithStyles(Tab)>
                      </div>
                      <WithStyles(TabIndicator) className="MuiTabs-indicator-20 RSFTabsRow-indicator-1 RSFTabsRow-noSelection-2" color="secondary" style={{...}}>
                        <TabIndicator className="MuiTabs-indicator-20 RSFTabsRow-indicator-1 RSFTabsRow-noSelection-2" color="secondary" style={{...}} classes={{...}}>
                          <span className="MuiPrivateTabIndicator-root-47 MuiPrivateTabIndicator-colorSecondary-49 MuiTabs-indicator-20 RSFTabsRow-indicator-1 RSFTabsRow-noSelection-2" style={{...}} />
                        </TabIndicator>
                      </WithStyles(TabIndicator)>
                    </div>
                  </div>
                </div>
              </Tabs>
            </WithStyles(Tabs)>
          </TabsRow>
        </inject-TabsRow-with-app>
      </WithStyles(inject-TabsRow-with-app)>
    </MuiThemeProviderOld>
  </Provider>
</TestProvider>
`;

exports[`TabsRow render should render tabs with text 1`] = `
<TestProvider>
  <Provider router={{...}} app={{...}} history={{...}} nextId={[Function: nextId]}>
    <MuiThemeProviderOld theme={{...}}>
      <WithStyles(inject-TabsRow-with-app) items={{...}}>
        <inject-TabsRow-with-app items={{...}} classes={{...}}>
          <TabsRow items={{...}} classes={{...}} app={{...}} variant="scrollable" orientation="horizontal" centered={false}>
            <WithStyles(Tabs) value={false} onChange={[Function]} indicatorColor="secondary" variant="scrollable" className="RSFTabsRow-root-53" classes={{...}}>
              <Tabs value={false} onChange={[Function]} indicatorColor="secondary" variant="scrollable" className="RSFTabsRow-root-53" theme={{...}} classes={{...}} centered={false} component="div" fullWidth={false} scrollable={false} ScrollButtonComponent={[Function: WithStyles]} scrollButtons="auto" textColor="inherit">
                <div className="MuiTabs-root-61 RSFTabsRow-root-53 RSFTabsRow-root-53" variant="scrollable">
                  <EventListener target="window" onResize={[Function: debounced]} />
                  <div className="MuiTabs-flexContainer-62">
                    <div className="MuiTabs-scroller-64 RSFTabsRow-scroller-57 MuiTabs-fixed-65" style={{...}} role="tablist" onScroll={[Function: debounced]}>
                      <div className="MuiTabs-flexContainer-62">
                        <WithStyles(Tab) label="Tab 1" icon={[undefined]} classes={{...}} fullWidth={false} indicator={false} selected={false} onChange={[Function]} textColor="inherit" value={0}>
                          <Tab label="Tab 1" icon={[undefined]} fullWidth={false} indicator={false} selected={false} onChange={[Function]} textColor="inherit" value={0} classes={{...}} disabled={false}>
                            <WithStyles(ButtonBase) focusRipple={true} className="MuiTab-root-70 RSFTabsRow-tab-54 MuiTab-textColorInherit-72" role="tab" aria-selected={false} disabled={false} onClick={[Function]}>
                              <ButtonBase focusRipple={true} className="MuiTab-root-70 RSFTabsRow-tab-54 MuiTab-textColorInherit-72" role="tab" aria-selected={false} disabled={false} onClick={[Function]} classes={{...}} centerRipple={false} component="button" disableRipple={false} disableTouchRipple={false} tabIndex="0" type="button">
                                <button className="MuiButtonBase-root-82 MuiTab-root-70 RSFTabsRow-tab-54 MuiTab-textColorInherit-72" onBlur={[Function]} onFocus={[Function]} onKeyDown={[Function]} onKeyUp={[Function]} onMouseDown={[Function]} onMouseLeave={[Function]} onMouseUp={[Function]} onTouchEnd={[Function]} onTouchMove={[Function]} onTouchStart={[Function]} tabIndex="0" type="button" disabled={false} role="tab" aria-selected={false} onClick={[Function]}>
                                  <span className="MuiTab-wrapper-78">
                                    <span className="MuiTab-labelContainer-79">
                                      <span className="MuiTab-label-80">
                                        Tab 1
                                      </span>
                                    </span>
                                  </span>
                                  <NoSsr defer={false} fallback={{...}}>
                                    <WithStyles(TouchRipple) innerRef={[Function]} center={false}>
                                      <TouchRipple center={false} classes={{...}}>
                                        <TransitionGroup component="span" enter={true} exit={true} className="MuiTouchRipple-root-85" childFactory={[Function: childFactory]}>
                                          <span className="MuiTouchRipple-root-85" />
                                        </TransitionGroup>
                                      </TouchRipple>
                                    </WithStyles(TouchRipple)>
                                  </NoSsr>
                                </button>
                              </ButtonBase>
                            </WithStyles(ButtonBase)>
                          </Tab>
                        </WithStyles(Tab)>
                        <WithStyles(Tab) label="Tab 2" icon={[undefined]} classes={{...}} fullWidth={false} indicator={false} selected={false} onChange={[Function]} textColor="inherit" value={1}>
                          <Tab label="Tab 2" icon={[undefined]} fullWidth={false} indicator={false} selected={false} onChange={[Function]} textColor="inherit" value={1} classes={{...}} disabled={false}>
                            <WithStyles(ButtonBase) focusRipple={true} className="MuiTab-root-70 RSFTabsRow-tab-54 MuiTab-textColorInherit-72" role="tab" aria-selected={false} disabled={false} onClick={[Function]}>
                              <ButtonBase focusRipple={true} className="MuiTab-root-70 RSFTabsRow-tab-54 MuiTab-textColorInherit-72" role="tab" aria-selected={false} disabled={false} onClick={[Function]} classes={{...}} centerRipple={false} component="button" disableRipple={false} disableTouchRipple={false} tabIndex="0" type="button">
                                <button className="MuiButtonBase-root-82 MuiTab-root-70 RSFTabsRow-tab-54 MuiTab-textColorInherit-72" onBlur={[Function]} onFocus={[Function]} onKeyDown={[Function]} onKeyUp={[Function]} onMouseDown={[Function]} onMouseLeave={[Function]} onMouseUp={[Function]} onTouchEnd={[Function]} onTouchMove={[Function]} onTouchStart={[Function]} tabIndex="0" type="button" disabled={false} role="tab" aria-selected={false} onClick={[Function]}>
                                  <span className="MuiTab-wrapper-78">
                                    <span className="MuiTab-labelContainer-79">
                                      <span className="MuiTab-label-80">
                                        Tab 2
                                      </span>
                                    </span>
                                  </span>
                                  <NoSsr defer={false} fallback={{...}}>
                                    <WithStyles(TouchRipple) innerRef={[Function]} center={false}>
                                      <TouchRipple center={false} classes={{...}}>
                                        <TransitionGroup component="span" enter={true} exit={true} className="MuiTouchRipple-root-85" childFactory={[Function: childFactory]}>
                                          <span className="MuiTouchRipple-root-85" />
                                        </TransitionGroup>
                                      </TouchRipple>
                                    </WithStyles(TouchRipple)>
                                  </NoSsr>
                                </button>
                              </ButtonBase>
                            </WithStyles(ButtonBase)>
                          </Tab>
                        </WithStyles(Tab)>
                      </div>
                      <WithStyles(TabIndicator) className="MuiTabs-indicator-69 RSFTabsRow-indicator-50 RSFTabsRow-noSelection-51" color="secondary" style={{...}}>
                        <TabIndicator className="MuiTabs-indicator-69 RSFTabsRow-indicator-50 RSFTabsRow-noSelection-51" color="secondary" style={{...}} classes={{...}}>
                          <span className="MuiPrivateTabIndicator-root-92 MuiPrivateTabIndicator-colorSecondary-94 MuiTabs-indicator-69 RSFTabsRow-indicator-50 RSFTabsRow-noSelection-51" style={{...}} />
                        </TabIndicator>
                      </WithStyles(TabIndicator)>
                    </div>
                  </div>
                </div>
              </Tabs>
            </WithStyles(Tabs)>
          </TabsRow>
        </inject-TabsRow-with-app>
      </WithStyles(inject-TabsRow-with-app)>
    </MuiThemeProviderOld>
  </Provider>
</TestProvider>
`;

exports[`TabsRow render should render tabs with urls 1`] = `
<TestProvider>
  <Provider router={{...}} app={{...}} history={{...}} nextId={[Function: nextId]}>
    <MuiThemeProviderOld theme={{...}}>
      <WithStyles(inject-TabsRow-with-app) items={{...}}>
        <inject-TabsRow-with-app items={{...}} classes={{...}}>
          <TabsRow items={{...}} classes={{...}} app={{...}} variant="scrollable" orientation="horizontal" centered={false}>
            <WithStyles(Tabs) value={false} onChange={[Function]} indicatorColor="secondary" variant="scrollable" className="RSFTabsRow-root-98" classes={{...}}>
              <Tabs value={false} onChange={[Function]} indicatorColor="secondary" variant="scrollable" className="RSFTabsRow-root-98" theme={{...}} classes={{...}} centered={false} component="div" fullWidth={false} scrollable={false} ScrollButtonComponent={[Function: WithStyles]} scrollButtons="auto" textColor="inherit">
                <div className="MuiTabs-root-106 RSFTabsRow-root-98 RSFTabsRow-root-98" variant="scrollable">
                  <EventListener target="window" onResize={[Function: debounced]} />
                  <div className="MuiTabs-flexContainer-107">
                    <div className="MuiTabs-scroller-109 RSFTabsRow-scroller-102 MuiTabs-fixed-110" style={{...}} role="tablist" onScroll={[Function: debounced]}>
                      <div className="MuiTabs-flexContainer-107">
                        <WithStyles(Tab) label={{...}} icon={[undefined]} classes={{...}} fullWidth={false} indicator={false} selected={false} onChange={[Function]} textColor="inherit" value={0}>
                          <Tab label={{...}} icon={[undefined]} fullWidth={false} indicator={false} selected={false} onChange={[Function]} textColor="inherit" value={0} classes={{...}} disabled={false}>
                            <WithStyles(ButtonBase) focusRipple={true} className="MuiTab-root-115 RSFTabsRow-tab-99 MuiTab-textColorInherit-117" role="tab" aria-selected={false} disabled={false} onClick={[Function]}>
                              <ButtonBase focusRipple={true} className="MuiTab-root-115 RSFTabsRow-tab-99 MuiTab-textColorInherit-117" role="tab" aria-selected={false} disabled={false} onClick={[Function]} classes={{...}} centerRipple={false} component="button" disableRipple={false} disableTouchRipple={false} tabIndex="0" type="button">
                                <button className="MuiButtonBase-root-127 MuiTab-root-115 RSFTabsRow-tab-99 MuiTab-textColorInherit-117" onBlur={[Function]} onFocus={[Function]} onKeyDown={[Function]} onKeyUp={[Function]} onMouseDown={[Function]} onMouseLeave={[Function]} onMouseUp={[Function]} onTouchEnd={[Function]} onTouchMove={[Function]} onTouchStart={[Function]} tabIndex="0" type="button" disabled={false} role="tab" aria-selected={false} onClick={[Function]}>
                                  <span className="MuiTab-wrapper-123">
                                    <span className="MuiTab-labelContainer-124">
                                      <span className="MuiTab-label-125">
                                        <WithStyles(inject-Link) className="RSFTabsRow-link-103" to="https://www.example.com" prefetch={[undefined]} onClick={[Function]}>
                                          <inject-Link className="RSFTabsRow-link-103" to="https://www.example.com" prefetch={[undefined]} onClick={[Function]} classes={{...}}>
                                            <Link className="RSFTabsRow-link-103" to="https://www.example.com" prefetch={[undefined]} onClick={[Function]} classes={{...}} history={{...}} router={{...}} location={{...}} anchorProps={{...}}>
                                              <a data-moov-link="on" className="RSFLink-root-130 RSFTabsRow-link-103" style={[undefined]} onClick={[Function]} href="https://www.example.com">
                                                Tab 1
                                              </a>
                                            </Link>
                                          </inject-Link>
                                        </WithStyles(inject-Link)>
                                      </span>
                                    </span>
                                  </span>
                                  <NoSsr defer={false} fallback={{...}}>
                                    <WithStyles(TouchRipple) innerRef={[Function]} center={false}>
                                      <TouchRipple center={false} classes={{...}}>
                                        <TransitionGroup component="span" enter={true} exit={true} className="MuiTouchRipple-root-131" childFactory={[Function: childFactory]}>
                                          <span className="MuiTouchRipple-root-131" />
                                        </TransitionGroup>
                                      </TouchRipple>
                                    </WithStyles(TouchRipple)>
                                  </NoSsr>
                                </button>
                              </ButtonBase>
                            </WithStyles(ButtonBase)>
                          </Tab>
                        </WithStyles(Tab)>
                        <WithStyles(Tab) label={{...}} icon={[undefined]} classes={{...}} fullWidth={false} indicator={false} selected={false} onChange={[Function]} textColor="inherit" value={1}>
                          <Tab label={{...}} icon={[undefined]} fullWidth={false} indicator={false} selected={false} onChange={[Function]} textColor="inherit" value={1} classes={{...}} disabled={false}>
                            <WithStyles(ButtonBase) focusRipple={true} className="MuiTab-root-115 RSFTabsRow-tab-99 MuiTab-textColorInherit-117" role="tab" aria-selected={false} disabled={false} onClick={[Function]}>
                              <ButtonBase focusRipple={true} className="MuiTab-root-115 RSFTabsRow-tab-99 MuiTab-textColorInherit-117" role="tab" aria-selected={false} disabled={false} onClick={[Function]} classes={{...}} centerRipple={false} component="button" disableRipple={false} disableTouchRipple={false} tabIndex="0" type="button">
                                <button className="MuiButtonBase-root-127 MuiTab-root-115 RSFTabsRow-tab-99 MuiTab-textColorInherit-117" onBlur={[Function]} onFocus={[Function]} onKeyDown={[Function]} onKeyUp={[Function]} onMouseDown={[Function]} onMouseLeave={[Function]} onMouseUp={[Function]} onTouchEnd={[Function]} onTouchMove={[Function]} onTouchStart={[Function]} tabIndex="0" type="button" disabled={false} role="tab" aria-selected={false} onClick={[Function]}>
                                  <span className="MuiTab-wrapper-123">
                                    <span className="MuiTab-labelContainer-124">
                                      <span className="MuiTab-label-125">
                                        <WithStyles(inject-Link) className="RSFTabsRow-link-103" to="https://www.example.com" prefetch={[undefined]} onClick={[Function]}>
                                          <inject-Link className="RSFTabsRow-link-103" to="https://www.example.com" prefetch={[undefined]} onClick={[Function]} classes={{...}}>
                                            <Link className="RSFTabsRow-link-103" to="https://www.example.com" prefetch={[undefined]} onClick={[Function]} classes={{...}} history={{...}} router={{...}} location={{...}} anchorProps={{...}}>
                                              <a data-moov-link="on" className="RSFLink-root-130 RSFTabsRow-link-103" style={[undefined]} onClick={[Function]} href="https://www.example.com">
                                                Tab 2
                                              </a>
                                            </Link>
                                          </inject-Link>
                                        </WithStyles(inject-Link)>
                                      </span>
                                    </span>
                                  </span>
                                  <NoSsr defer={false} fallback={{...}}>
                                    <WithStyles(TouchRipple) innerRef={[Function]} center={false}>
                                      <TouchRipple center={false} classes={{...}}>
                                        <TransitionGroup component="span" enter={true} exit={true} className="MuiTouchRipple-root-131" childFactory={[Function: childFactory]}>
                                          <span className="MuiTouchRipple-root-131" />
                                        </TransitionGroup>
                                      </TouchRipple>
                                    </WithStyles(TouchRipple)>
                                  </NoSsr>
                                </button>
                              </ButtonBase>
                            </WithStyles(ButtonBase)>
                          </Tab>
                        </WithStyles(Tab)>
                      </div>
                      <WithStyles(TabIndicator) className="MuiTabs-indicator-114 RSFTabsRow-indicator-95 RSFTabsRow-noSelection-96" color="secondary" style={{...}}>
                        <TabIndicator className="MuiTabs-indicator-114 RSFTabsRow-indicator-95 RSFTabsRow-noSelection-96" color="secondary" style={{...}} classes={{...}}>
                          <span className="MuiPrivateTabIndicator-root-138 MuiPrivateTabIndicator-colorSecondary-140 MuiTabs-indicator-114 RSFTabsRow-indicator-95 RSFTabsRow-noSelection-96" style={{...}} />
                        </TabIndicator>
                      </WithStyles(TabIndicator)>
                    </div>
                  </div>
                </div>
              </Tabs>
            </WithStyles(Tabs)>
          </TabsRow>
        </inject-TabsRow-with-app>
      </WithStyles(inject-TabsRow-with-app)>
    </MuiThemeProviderOld>
  </Provider>
</TestProvider>
`;
